--- a/🛠️ 2. Agentes de IA.ipynb
+++ b/🛠️ 2. Agentes de IA.ipynb
@@ -413,7 +413,7 @@
     }
    },
    "source": [
-    "### A. Habilitar o Change Data Feed na tabela `FAQ`\n",
+    "### A. Habilitar o Change Data Feed en la tabla `FAQ`\n",
     "\n",
     "Esta configuración permite a Vector Search leer los datos ingresados, eliminados o modificados en las preguntas frecuentes de forma incremental."
    ]
@@ -456,7 +456,7 @@
     "\n",
     "Esta etapa tarda como 5 min!\n",
     "\n",
-    "1. No **menu principal** à esquerda, clique em **`Catalog`**\n",
+    "1. En el **menu principal** en la izquierda, clique em **`Catalog`**\n",
     "2. Busque a sua **tabela** `agents_ia.atencion.faq`\n",
     "3. Clique em `Create` e depois em `Vector search index`\n",
     "4. Preencha o formulário:\n",
@@ -879,7 +879,7 @@
    "inputWidgetPreferences": null,
    "language": "sql",
    "notebookMetadata": {
-    "pythonIndentUnit": 4
+    "pythonIndentUnit": 2
    },
    "notebookName": "🛠️ 2. Agentes de IA",
    "widgets": {}
