--- a/🛠️ 2. Agentes de IA.ipynb
+++ b/🛠️ 2. Agentes de IA.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "El primer paso en la construcción de nuestro agente será entender cómo utilizar **Unity Catalog Tools**.\n",
     "\n",
-    "En la práctica de laboratorio anterior, creamos algunas funciones, como `revisar_evaluacion`, que nos permitió facilitar la invocación de nuestros modelos de IA generativa desde SQL. Sin embargo, nuestros LLM también pueden utilizar estas mismas funciones como herramientas. ¡Simplemente indique qué funciones puede utilizar el modelo!\n",
+    "En la práctica de laboratorio anterior, creamos algunas funciones, como `revisar_resena_es`, que nos permitió facilitar la invocación de nuestros modelos de IA generativa desde SQL. Sin embargo, nuestros LLM también pueden utilizar estas mismas funciones como herramientas. ¡Simplemente indique qué funciones puede utilizar el modelo!\n",
     "\n",
     "Poder utilizar el mismo catálogo de herramientas en toda la plataforma nos simplifica enormemente la vida al promover la reutilización de estos activos. Esto puede ahorrar horas de remodelación y estandarizar estos conceptos."
    ]
@@ -161,7 +161,7 @@
     "1. En el **menú principal** de la izquierda, haz clic en **`Playground`**\n",
     "2. Haz clic en el **selector de modelo** y selecciona el modelo **`Meta Llama 3.3 70B Instruct`** (si aún no está seleccionado)\n",
     "3. Hacer clic **Tools** y luego en **Add Tool** \n",
-    "4. En **Hosted Function**, tipear `agents_ia.atencion.revisa_resena`\n",
+    "4. En **Hosted Function**, tipear `agents_ia.atencion.revisar_resena_es`\n",
     "5. Agregue instrucciones a continuación:\n",
     "    ```\n",
     "    Revise la reseña a continuación:\n",
@@ -197,7 +197,7 @@
     "En nuestro caso nos gustaría:\n",
     "- Consultar datos del cliente\n",
     "- Búsqueda de preguntas y respuestas en una base de conocimientos\n",
-    "- Proporciona recomendaciones de productos personalizadas basadas en tus descripciones.\n",
+    "- Proporcionar recomendaciones de productos personalizadas basadas en tus descripciones.\n",
     "\n",
     "¡Comencemos consultando los datos de los clientes!"
    ]
@@ -348,7 +348,7 @@
     "1. En el **menú principal** de la izquierda, haz clic en **`Playground`**\n",
     "2. Haga clic en el **selector de modelo** y seleccione el modelo **`Meta Llama 3.3 70B Instruct`** (si aún no está seleccionado)\n",
     "3. Haga clic en **Tools** y luego en **Add Tools**\n",
-    "4. En **Hosted function**, escriba `agents_ia.atencion.consulta_cliente` y `agents_ia.atencion.revisa_resena`\n",
+    "4. En **Hosted function**, escriba `agents_ia.atencion.consulta_cliente` y `agents_ia.atencion.revisar_resena_es`\n",
     "5. Agregue las instrucciones a continuación:<br>\n",
     " Generar una respuesta al cliente 1 que no está satisfecho con la calidad de la pantalla de su tablet. No olvides personalizar el mensaje con el nombre del cliente.\n",
     "6. Haga clic en el ícono **enviar**"
@@ -428,6 +428,56 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "fe903c0e-50e4-4156-80fd-2ed5194a08b2",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Primero traducimos la tabla al español"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "CREATE OR REPLACE TABLE faq_es as \n",
+    "SELECT id,\n",
+    "      ai_query(\n",
+    "        'databricks-meta-llama-3-3-70b-instruct',\n",
+    "        concat('traduce al español y devuelveme solo el texto traducido', pergunta)) AS pregunta,\n",
+    "       ai_query(\n",
+    "        'databricks-meta-llama-3-3-70b-instruct',\n",
+    "        concat('traduce al español y devuelveme solo el texto traducido', resposta)) AS respuesta\n",
+    "FROM faq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4493573b-2b6b-42ea-a4f8-a811c9f04748",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT * FROM faq_es"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "3ed0ce0f-95ea-4894-bf1e-4e1ff16e747b",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -436,7 +486,7 @@
    },
    "outputs": [],
    "source": [
-    "ALTER TABLE faq SET TBLPROPERTIES (delta.enableChangeDataFeed = true)"
+    "ALTER TABLE faq_es SET TBLPROPERTIES (delta.enableChangeDataFeed = true)"
    ]
   },
   {
@@ -452,25 +502,25 @@
     }
    },
    "source": [
-    "### B. Crear un índice en Búsqueda de vectores (Vector Search)\n",
+    "### B. Crear un índice de Búsqueda de vectores (Vector Search)\n",
     "\n",
     "Esta etapa tarda como 5 min!\n",
     "\n",
-    "1. En el **menu principal** en la izquierda, clique em **`Catalog`**\n",
-    "2. Busque a sua **tabela** `agents_ia.atencion.faq`\n",
-    "3. Clique em `Create` e depois em `Vector search index`\n",
-    "4. Preencha o formulário:\n",
-    "    - **Nome:** faq_index\n",
+    "1. En el **menu principal** en la izquierda, selecciona **`Catalog`**\n",
+    "2. Busque su **tabla** `agents_ia.atencion.faq_es`\n",
+    "3. Haga clic en `Create` y después en `Vector search index`\n",
+    "4. Rellene el formulario:\n",
+    "    - **Nombre:** faq_es_index\n",
     "    - **Primary key:** id\n",
-    "    - **Endpoint**: selecione o endpoint desejado\n",
-    "    - **Columns to sync:** deixar em branco (sincroniza todas as colunas)\n",
+    "    - **Columns to sync:** dejar en blanco (sincroniza todas las columnas)\n",
     "    - **Embedding source:** Compute embeddings (Vector Search gestiona la indexación/creación de embeddings)\n",
-    "    - **Embedding source column:** pergunta\n",
+    "    - **Embedding source column:** pregunta\n",
     "    - **Embedding model:** databricks-gte-large-en\n",
-    "    - **Sync computed embeddings:** desabilitado\n",
+    "    - **Sync computed embeddings:** deshabilitado\n",
+    "    - **Endpoint**: seleccione el endpoint de vector search deseado\n",
     "    - **Sync mode:** Triggered\n",
-    "5. Clique em `Create`\n",
-    "6. Aguarde a criação do índice finalizar"
+    "5. Haga clic en `Create`\n",
+    "6. Espere a que finalice la creación del índice"
    ]
   },
   {
@@ -499,34 +549,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "13de3716-752e-4c2c-a982-1dad70266825",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "CREATE OR REPLACE FUNCTION consulta_faq(pergunta STRING)\n",
-    "RETURNS TABLE(id LONG, pregunta STRING, respuesta STRING, search_score DOUBLE)\n",
-    "COMMENT 'Utilice esta función para consultar la base de conocimientos sobre tiempos de entrega, solicitudes de cambio o devolución, entre otras preguntas frecuentes sobre nuestro mercado.'\n",
-    "RETURN select * from vector_search(\n",
-    "  index => 'agents_ia.atencion.faq_index', \n",
-    "  query => consulta_faq.pergunta,\n",
-    "  num_results => 1\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "06be027d-1355-45e7-b6e4-97d89d0e3f0a",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -539,9 +561,9 @@
     "RETURNS STRING\n",
     "COMMENT 'Utilice esta función para consultar la base de conocimientos sobre tiempos de entrega, solicitudes de cambio o devolución, entre otras preguntas frecuentes sobre nuestro mercado.'\n",
     "RETURN (\n",
-    "  SELECT resposta \n",
+    "  SELECT respuesta \n",
     "  FROM vector_search(\n",
-    "    index => 'agents_ia.atencion.faq_index', \n",
+    "    index => 'agents_ia.atencion.faq_es_index', \n",
     "    query => pregunta,\n",
     "    num_results => 1\n",
     "  )\n",
@@ -604,7 +626,7 @@
    },
    "outputs": [],
    "source": [
-    "SELECT consulta_faq('¿Cómo emitir un duplicado?')"
+    "SELECT consulta_faq('¿Cómo hago para saber donde está mi pedido?')"
    ]
   },
   {
@@ -672,7 +694,35 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "34ae1648-3bc9-41aa-a6cf-448edb82e4a8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "CREATE OR REPLACE TABLE productos_es as \n",
+    "SELECT id,\n",
+    "      ai_translate(produto, 'es') AS producto,\n",
+    "      ai_translate(descricao, 'es') AS descripcion\n",
+    "FROM productos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "36f9a24d-4587-457a-8754-e63068b71981",
      "showTitle": false,
@@ -682,7 +732,7 @@
    },
    "outputs": [],
    "source": [
-    "ALTER TABLE productos SET TBLPROPERTIES (delta.enableChangeDataFeed = true)"
+    "ALTER TABLE productos_es SET TBLPROPERTIES (delta.enableChangeDataFeed = true)"
    ]
   },
   {
@@ -701,18 +751,18 @@
     "### B. Crear un índice en el Vector Search\n",
     "\n",
     "1. En el **menú principal** de la izquierda, haga clic en **`Catálogo`**\n",
-    "2. Busca tu **tabla** `agents_ia.atencion.productos`\n",
+    "2. Busca tu **tabla** `agents_ia.atencion.productos_es`\n",
     "3. Haga clic en `Create` y luego en `Vector search index`\n",
     "4. Complete el formulario:\n",
-    " - **Nombre:** productos_index\n",
+    " - **Nombre:** productos_es_index\n",
     " - **Primary key:** id\n",
-    " - **Endpoint**: seleccione el punto final deseado\n",
     " - **Columns to sync:** dejar en blanco (sincroniza todas las columnas)\n",
-    " - **Fuente de incrustación:** Computar incrustaciones (Vector Search gestiona la indexación/creación de incrustaciones)\n",
-    " - **Embedding source:** descripción\n",
+    " - **Embedding source:** Compute embeddings (Vector Search gestiona la indexación/creación de embeddings)\n",
+    " - **Embedding source column:** descripción\n",
     " - **Embedding model:** databricks-gte-large-en\n",
     " - **Sync computed embeddings:** deshabilitado\n",
-    " - **Sync mode:** Activado\n",
+    " - **Endpoint**: seleccione el vector search endpoint deseado\n",
+    " - **Sync mode:** Triggered\n",
     "5. Haga clic en \"Create\".\n",
     "6. Espere a que finalice la creación del índice."
    ]
@@ -738,7 +788,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a21dd9ae-7c63-4d82-9fbb-5925675785e1",
      "showTitle": false,
@@ -751,10 +804,10 @@
     "CREATE OR REPLACE FUNCTION busca_productos_similares(descripcion STRING)\n",
     "RETURNS TABLE(id LONG, producto STRING, descripcion STRING, search_score DOUBLE)\n",
     "COMMENT 'Esta función recibe una descripción del producto, que se utiliza para buscar productos similares.'\n",
-    "RETURN SELECT id, produto, descricao, search_score FROM (\n",
+    "RETURN SELECT id, producto, descripcion, search_score FROM (\n",
     "  SELECT *, ROW_NUMBER() OVER (ORDER BY search_score DESC) AS rn\n",
     "  FROM vector_search(\n",
-    "    index => 'agents_ia.atencion.productos_index',\n",
+    "    index => 'agents_ia.atencion.productos_es_index',\n",
     "    query => busca_productos_similares.descripcion,\n",
     "    num_results => 10)\n",
     "  WHERE search_score BETWEEN 0.003 AND 0.99\n",
@@ -782,7 +835,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b67fc5d2-ab90-4a6b-83c5-36526ee77e04",
      "showTitle": false,
@@ -846,8 +902,8 @@
     "6. Escribe \"¡Hola!\"\n",
     "7. Ingrese el número de cédula `000.000.000-01`\n",
     "8. Escriba \"Compré una tableta DEF, pero la calidad de la pantalla es muy mala\".\n",
-    "9. Escriba \"¿Podría recomendar productos similares?\"\n",
-    "10. Escriba \"¿Cómo solicito un cambio?\""
+    "9. Escriba \"¿Me podrías recomendar productos similares?\"\n",
+    "10. Escriba \"Vale, me lo voy a pensar, pero ahora, ¿cómo puedo solicitar una devolución?\""
    ]
   },
   {
